2007-09-13  Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions to get MAC address.
	* cg_net_interface_setmacaddress(), cg_net_interface_getmacaddress()
	* Changed cg_net_gethostinterfaces() to get the MAC address using GetAdaptersInfo() as default on Windows platform.
	* Changed cg_net_gethostinterfaces() to get the MAC address using ioctl() on Linux platform.
	* Changed cg_net_gethostinterfaces() to get the MAC address using getifaddrs() on other UNIX platform.
	*   Note : Other platforms might not support to get this functions yet. 

2007-08-30  Satoshi Konno <skonno@cybergarage.org>
	* Removed the patent exclusion clause from the license based on BSD.

2007-08-19  Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions into <cfile.h>
	  cg_file_setpath()
	  cg_file_setfilename()

2007-07-25  Satoshi Konno <skonno@cybergarage.org>
	* Added the following macros into <cfile.h>
	  cg_file_isseparatorchar()
	  cg_file_ispathseparatorchar()

2007-07-18  Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions to support more raw functions.
	  cg_file_open()
	  cg_file_close()
	  cg_file_write()
	  cg_file_read()
	  cg_file_seek() 

2007-06-26  Satoshi Konno <skonno@cybergarage.org>
	* Added CgByte to <typedef.h>

2007-06-13  Fabrice Fontaine Orange <ffontaine.ext@orange-ftgroup.com>
	* Fixed a memory leak in cg_http_request_delete().
	* Fixed compilation issue when using DCG_UPNP_NOUSE_CONTROLPOINT flag in cg_upnp_device_updatefromssdppacket().
	* Fixed a memory leak in cg_upnp_device_getservicebycontrolurl().
	* Fixed cg_thread_start(). Threads used to answer UPnP requests are created
	  in joinable state but the main thread doesn't call pthread_join on them.
	  So, they are kept alive until the end of the program. By creating them
	  in detached state, they are correctly clean up.
	* Fixed cg_thread_stop_with_cond() to wait one second for thread termination instead of using pthread_join(). 
