@@ -8,6 +8,7 @@ class ClinkTestCase : public CPPUNIT_NS::TestFixture
   CPPUNIT_TEST_SUITE( ClinkTestCase );
 
   CPPUNIT_TEST( testNetworkInterface );
+  CPPUNIT_TEST( testHttpServer );
 
   CPPUNIT_TEST_SUITE_END();
 
@@ -19,6 +20,7 @@ public:
 protected:
   
 	void testNetworkInterface();
+	void testHttpServer();
 };
 
 #endif
